--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,8 +2,10 @@ before:
   hooks:
     - go mod download
 builds:
-- env:
-  - CGO_ENABLED=0
+- main:
+    ./cmd/s3copier/main.go
+  env:
+    - CGO_ENABLED=0
 archive:
   replacements:
     linux: Linux
